error message displaying none

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div id="wind"></div>
             </div>
         </div>
-        <div id="errorDisplay">
+        <div id="errorDisplay" style="display: none;">
             <div class="errorTop">Something Went Wrong!</div>
             <div class="errorBottom">The data can't be found for the  location you entered</div>
             <button id="close">Close</button>
